--- a/01-python_concepts.ipynb
+++ b/01-python_concepts.ipynb
@@ -563,7 +563,9 @@
    "id": "d6b4180c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#lalalalala"
+   ]
   },
   {
    "cell_type": "code",
