--- a/01-python_concepts.ipynb
+++ b/01-python_concepts.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "902fe3bd",
    "metadata": {},
    "outputs": [
@@ -80,16 +80,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "606a10b9",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'name': 'John', 'email': 'john@some.com'}, {'name': 'Ann', 'email': 'ann@some.com'}]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[{'name': 'John', 'email': 'john@some.com'},\n",
+       " {'name': 'Ann', 'email': 'ann@some.com'}]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -114,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "f004d7b5",
    "metadata": {},
    "outputs": [
@@ -122,7 +126,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.12217072964775266\n"
+      "0.8650924528392059\n"
      ]
     }
    ],
@@ -135,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "a8efc6fc",
    "metadata": {},
    "outputs": [
@@ -143,7 +147,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-0.42\n"
+      "-0.56\n"
      ]
     }
    ],
@@ -155,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "1a29e601",
    "metadata": {},
    "outputs": [
@@ -163,7 +167,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8\n"
+      "5\n"
      ]
     }
    ],
@@ -175,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "3a150c3e",
    "metadata": {},
    "outputs": [
@@ -183,7 +187,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T\n"
+      "H\n"
      ]
     }
    ],
@@ -195,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "f0af49dc",
    "metadata": {},
    "outputs": [
@@ -203,16 +207,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HHHTTHTHHH\n"
+      "THHHHTTHHH\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['HHH', '', 'H', 'HHH']"
+       "['', 'HHHH', '', 'HHH']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "d8f79474",
    "metadata": {},
    "outputs": [
@@ -260,17 +264,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "4455c3c7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['01-python_concepts.ipynb', '.ipynb_checkpoints']"
+       "['RandomIntegerGenerator',\n",
+       " '.DS_Store',\n",
+       " '01-python_concepts.ipynb',\n",
+       " 'README.md',\n",
+       " 'desolation_row.txt',\n",
+       " '.ipynb_checkpoints',\n",
+       " '.git']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "13f630fe",
    "metadata": {},
    "outputs": [
@@ -302,7 +312,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "349\n"
+      "342\n"
      ]
     }
    ],
@@ -320,17 +330,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "030bfe36",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2024, 1, 17, 17, 50, 54, 995843)"
+       "datetime.timedelta(days=343)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "id": "6fef4a8c",
    "metadata": {},
    "outputs": [
@@ -398,10 +408,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "abdff589",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a stock symbol (or press Enter to finish): ABC\n",
+      "Enter a stock symbol (or press Enter to finish): CDE\n",
+      "Enter a stock symbol (or press Enter to finish): \n",
+      "Stock symbols entered: ['ABC', 'CDE']\n"
+     ]
+    }
+   ],
    "source": [
     "stock_symbols = []\n",
     "\n",
@@ -447,10 +468,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "8148095f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1021\n"
+     ]
+    }
+   ],
    "source": [
     "values2 = [58, 32, 37, 41, 36, 36, 54, 37, 25, 53]\n",
     "\n",
@@ -471,11 +500,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "f7fa569d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open('/Users/cristiancastilloe/Downloads/OIM7502_SP24/data/desolation_row.txt', 'w') as file:\n",
+    "        file.write(\"Test text\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -487,10 +519,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "bb115cdc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Die 1: 6, Die 2: 2, Total: 8\n"
+     ]
+    }
+   ],
    "source": [
     "def diceroll():\n",
     "\n",
@@ -517,10 +557,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "aaefba17",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1.59 is negative.\n",
+      "2.36 is positive.\n",
+      "1.69 is positive.\n",
+      "1.13 is positive.\n",
+      "-0.91 is negative.\n",
+      "1.48 is positive.\n",
+      "-0.34 is negative.\n",
+      "1.31 is positive.\n",
+      "-0.74 is negative.\n",
+      "0.2 is positive.\n"
+     ]
+    }
+   ],
    "source": [
     "values = [-1.59, 2.36, 1.69, 1.13, -0.91, 1.48, -0.34, 1.31, -0.74, 0.2]\n",
     "\n",
@@ -548,56 +605,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "60a910bb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "randomvaluen = random.randint(1, n)\n",
-    "print (randomvaluen)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "d6b4180c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 3, 2, 5, 2, 4, 6, 1, 5, 6, 6, 11, 13, 5, 8, 6, 11, 11, 4, 9, 4, 15, 23, 4, 24, 27, 8, 4, 2, 21, 1, 21, 34, 28, 29, 5, 1, 14, 38, 22, 32, 37, 20, 32, 37, 33, 41, 11, 42, 8, 13, 47, 33, 13, 25, 31, 38, 52, 31, 22, 9, 5, 22, 37, 17, 2, 61, 21, 29, 9, 61, 39, 4, 46, 66, 33, 12, 75, 17, 64, 60, 75, 73, 22, 62, 59, 20, 80, 55, 81, 3, 27, 21, 26, 49, 77, 55, 70, 59, 27, 7, 57, 16, 34, 78, 2, 81, 69, 10, 109, 94, 62, 94, 10, 19, 102, 21, 76, 64, 13, 104, 53, 118, 88, 106, 58, 123, 53, 71, 79, 6, 129, 127, 93, 55, 102, 90, 44, 72, 97, 121, 31, 82, 145, 93, 121, 129, 96, 40, 131, 35, 31, 89, 4, 48, 92, 25, 52, 11, 58, 3, 86, 100, 96, 105, 149, 55, 6, 98, 78, 90, 169, 117, 36, 117, 149, 118, 3, 139, 87, 110, 176, 89, 183, 97, 137, 146, 163, 14, 156, 156, 161, 116, 150, 181, 23, 89, 2, 122, 199, 89, 20, 63, 81, 143, 76, 4, 83, 17, 33, 32, 117, 175, 160, 15, 208, 132, 211, 25, 153, 222, 36, 45, 219, 66, 165, 108, 228, 96, 18, 188, 135, 64, 155, 128, 4, 133, 38, 147, 87, 120, 138, 11, 175, 225, 48, 203, 202, 21, 51, 234, 58, 101, 23, 184, 113, 4, 227, 254, 111, 180, 174, 112, 128, 258, 39, 165, 192, 234, 168, 75, 4, 260, 127, 153, 159, 44, 245, 218, 102, 167, 49, 144, 105, 121, 6, 155, 281, 17, 259, 15, 167, 196, 259, 50, 175, 236, 7, 75, 243, 117, 130, 98, 245, 90, 121, 54, 170, 240, 283, 173, 72, 242, 197, 10, 194, 148, 153, 17, 242, 270, 153, 173, 60, 206, 259, 110, 327, 322, 225, 327, 51, 316, 249, 214, 281, 59, 260, 183, 122, 19, 7, 133, 127, 155, 305, 306, 29, 110, 105, 288, 295, 317, 181, 185, 147, 298, 32, 313, 147, 213, 48, 359, 119, 196, 111, 92, 223, 313, 138, 88, 157, 57, 324, 330, 196, 201, 197, 301, 263, 291, 333, 383, 13, 252, 370, 43, 320, 246, 97, 189, 73, 172, 100, 82, 341, 15, 310, 210, 327, 306, 269, 264, 77, 58, 183, 90, 260, 319, 121, 187, 300, 237, 414, 258, 37, 259, 8, 187, 294, 150, 385, 34, 348, 403, 31, 306, 106, 165, 317, 245, 380, 327, 38, 78, 247, 383, 210, 50, 434, 15, 440, 121, 337, 205, 338, 41, 257, 145, 171, 185, 196, 37, 17, 395, 413, 149, 117, 23, 440, 256, 128, 123, 139, 135, 90, 262, 411, 384, 315, 262, 259, 229, 286, 25, 201, 12, 39, 342, 123, 193, 358, 95, 428, 106, 458, 435, 371, 273, 305, 376, 56, 422, 196, 359, 475, 392, 398, 17]\n"
+     ]
+    }
+   ],
    "source": [
-    "#lalalalala"
+    "def random_integers_generator(n):\n",
+    "    random_integers = [random.randint(1, min(i, n)) for i in range(1, 501)]\n",
+    "    return random_integers\n",
+    "\n",
+    "n = 500\n",
+    "\n",
+    "random_integers = random_integers_generator(n)\n",
+    "\n",
+    "print(random_integers)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "adb6aa11",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6745da79",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "21140445",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3d546600",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
